# rushdown-footnote

./: Cargo.toml  README.md
src/: lib.rs
tests/: footnote.rs
tests/fixtures/: footnote.txt
